# ClimateNet

./: .gitignore  CMakeLists.txt  Configuration.md  Doxyfile.in  README.md  Stats.md  example-init.py  example.py  example.txt  example2.py  example3.py
example/: README.md  best_model.pkl  conda_env.yml  example.ipynb  example.py  exampleMock.py  example_combined.py  examplerecent.py  grid_search.py  nohup.out  notifyChangeForGoogleDrive.sh  solutionAvecXg_boost_random_Search.ipynb  submission.csv  submission_20231027174749.csv  submission_20231027190412.csv
example/climatenet/: models.py
example/hyperparametersPreparation/rf/: gpu_grid_search.ipynb_error.txt  grid_heavyHyper_search.py  grid_random_search.py  improved_rf_grid_search.py
example/hyperparametersPreparation/xg_boost/: random_grid_search.py
example/remise/: README.md  conda_env.yml  example.py  grid_optuna_search.py  grid_random_search.py  grid_search.py
example/rf_hyperparametersPreparation/: gpu_grid_heavyHyper_search.ipynb  grid_heavyHyper_search.py  optuna_search.py
example/saved_models/: SimpleDummyClassifier_29_11_40_05.joblib  SimpleLogisticRegression_29_00_58_37.joblib  SimpleLogisticRegression_29_01_17_02.joblib  SimpleLogisticRegression_29_01_27_56.joblib  SimpleLogisticRegression_29_11_40_43.joblib  best_model_SimpleLogisticRegression_20231029_003358.joblib
example_tmp/classification-of-extreme-weather-events-udem_20231027012141/: test-example.csv
example_tmp_20231026231630/: conda_env.yml  example.py  main.ipynb  nohup.out  notifyChangeForGoogleDrive.sh
include/: StepCallBack.hpp  StepCallBack.impl.hpp  cpp_utils.hpp  eigen_kernel.hpp  jsonHelper.hpp  log_building.hpp  omp_utils.hpp  scene_building.hpp  simulation_building.hpp  types.hpp  util.hpp
include/geometry/: Mesh.hpp  Sphere.hpp  geometry_util.hpp  io.hpp
include/physics/: AbstractConstraint.hpp  AttachmentConstraint.hpp  BendingConstraint.hpp  CollisionConstraint.hpp  MaterialObject.hpp  MovingMesh.hpp  MovingObstacle.hpp  Obstacle.hpp  PhysicMesh.hpp  PhysicScene.hpp  RotatingSphere.hpp  SimulationBase.hpp  SimulationFrictionEstimation.hpp  SimulationSpeed.hpp  SpringConstraint.hpp  StaticAxisAlignedBox.hpp  StaticMesh.hpp  StaticObstacle.hpp  StaticPlane.hpp  StaticSphere.hpp  coulomb_util.hpp  io.hpp
model/: config_new.json  weights_new.pth
replicability/: README.md  alart_curnier_data_processing.py  analytic_example_data_processing.py  compile.sh  dependencies.sh  dependencies_and_compile.sh  figure_1.sh  figure_2.sh  figure_3_and_table_2.sh  figure_5.sh  figure_6.sh  generate_figures.sh  information.txt
replicability/scenes/Analytic/: analytic.json
replicability/scenes/Ribbon/: iterations_10.json  iterations_20.json  iterations_30.json  iterations_5.json  (+2 more)
scenes/: README.md  analytic.json  arabesque.json  arabesque_more.json  sphere_1_layer.json  sphere_3_layers.json  tree.json
src/: StepCallBack.cpp  jsonHelper.cpp  log_building.cpp  main.cpp  scene_building.cpp  simulation_building.cpp  util.cpp
src/geometry/: Mesh.cpp  Sphere.cpp  geometry_util.cpp  io.cpp
src/physics/: AbstractConstraint.cpp  AttachmentConstraint.cpp  BendingConstraint.cpp  CollisionConstraint.cpp  MaterialObject.cpp  MovingMesh.cpp  Obstacle.cpp  PhysicMesh.cpp  PhysicScene.cpp  RotatingSphere.cpp  SimulationBase.cpp  SimulationFrictionEstimation.cpp  SimulationSpeed.cpp  SpringConstraint.cpp  StaticAxisAlignedBox.cpp  StaticMesh.cpp  StaticObstacle.cpp  StaticPlane.cpp  StaticSphere.cpp  coulomb_util.cpp  io.cpp
template/geometry/: Mesh.tpp
template/physics/: io.tpp
(+8 files in other folders)
